// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for TalonOne's trackEventV2 destination action: all fields 1`] = `
Object {
  "customerProfileId": "@*g0]#jUfAqZ28L86&D",
  "eventAttributes": Object {
    "testType": "@*g0]#jUfAqZ28L86&D",
  },
  "eventType": "@*g0]#jUfAqZ28L86&D",
}
`;

exports[`Testing snapshot for TalonOne's trackEventV2 destination action: required fields 1`] = `
Object {
  "customerProfileId": "@*g0]#jUfAqZ28L86&D",
  "eventType": "@*g0]#jUfAqZ28L86&D",
}
`;
